--- a/html/index.html
+++ b/html/index.html
@@ -16,31 +16,31 @@
 
 
     <header class="navbar navbar-light bg-light">
-        <h4>BitShow</h4>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-inline form-control mr-sm-2 button" type="search" placeholder="Search" aria-label="Search">
-        </form>
-
-        <!-- <button onclick="myFunction()" class="dropbtn">Dropdown</button>
-        <div id="myDropdown" class="dropdown-content">
-          <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-          <a href="#about">About</a>
-          <a href="#base">Base</a>
-          <a href="#blog">Blog</a>
-          <a href="#contact">Contact</a>
-          <a href="#custom">Custom</a>
-          <a href="#support">Support</a>
-          <a href="#tools">Tools</a>
-        </div> -->
-
+        <div class="container">
+            <h4>BitShow</h4>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-inline form-control mr-sm-2 button" type="search" placeholder="Search" aria-label="Search">
+            </form>
+        </div>
     </header>
 
-    <div>
-        <h2>Popular Show</h2>
-    </div>
+    <main>
+        <div class="container">
+
+            <h2>Popular Show</h2>
+
+            <div class='top50 clearfix'>
+
+            </div>
+
+        </div>
+    </main>
     <footer>
         <p>Copyright@BitStudent</p>
     </footer>
+
+
+
 
 
 
